--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	    <meta charset="UTF-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>JOBPORTAL | APPLY</title>
+	    <title>NUTRI APP</title>
 	        <!-- favicon -->
 	        <!-- <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon"> -->
 	        <!-- <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon"> -->
@@ -30,11 +30,11 @@
 	    <!-- Login form -->
 	    <div class="container">
 	    	<div class="login mt-5"> 
-	        <h2 style="margin-left:480px;">Apply Now</h2>
+	        <h2 style="margin-left:480px;">Please Enter your details</h2>
 	        
 	    
 	        <form action="/uploaddata"  method="post" class="mt-3" style="margin-left:380px;">
-	         {{ msg }}
+	  
 			  <div class="row mb-3 mx-auto">
 			    <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
 			    <div class="col-sm-10 col-lg-4">
@@ -78,7 +78,7 @@
 			  </div>
 			  <button type="submit" class="btn btn-primary" style="margin-left:130px;">Submit</button>
 			  <p class="worddark">Display the details<a  href="/display">click here</a></p>
-			{{account}}
+			
 			</form>
 			
 	    </div>
